--- a/memories.html
+++ b/memories.html
@@ -14,64 +14,57 @@
   <div class="glass-card">
     <h1>📸 Our Memories</h1>
     <p class="subtext">Every photo is a piece of my heart ❤️</p>
+    <p class="subtext">Don't forget to click on each photo or video to see the special message!</p>
 
     <div class="gallery">
 
       <!-- PHOTOS -->
       <div class="memory-item">
-        <img src="assets/photo1.jpg" alt="memory"
-          onclick="openLightbox('assets/photo1.jpg','photo','Best memories nang tayo lang dalawa 🥰')">
+        <img src="assets/photo1.jpg" alt="memory" onclick="openLightbox(1,'photo')">
       </div>
 
       <div class="memory-item">
-        <img src="assets/photo2.jpg" alt="memory"
-          onclick="openLightbox('assets/photo2.jpg','photo','Ito yung moment na sobrang saya ko kasi kasama kita mag night ride kahit may aberya!🥺')">
+        <img src="assets/photo2.jpg" alt="memory" onclick="openLightbox(2,'photo')">
       </div>
 
       <div class="memory-item">
-        <img src="assets/photo3.jpg" alt="memory"
-          onclick="openLightbox('assets/photo3.jpg','photo','ito naman yung unang coffee date natin sobrang thankful ko dahil napapayag kita, medj tampo lang kasi nag aya kapa hehe joke! 💖')">
+        <img src="assets/photo3.jpg" alt="memory" onclick="openLightbox(3,'photo')">
       </div>
 
       <div class="memory-item">
-        <img src="assets/photo4.jpg" alt="memory"
-          onclick="openLightbox('assets/photo4.jpg','photo','Ito yung araw na hindi ka makalimutan. na kahit nasan man ako ikaw ang nasa isip ko lagi 🥺')">
+        <img src="assets/photo4.jpg" alt="memory" onclick="openLightbox(4,'photo')">
       </div>
 
       <div class="memory-item">
-        <img src="assets/photo5.jpg" alt="memory"
-          onclick="openLightbox('assets/photo5.jpg','photo','Ito yung picture na paulit-ulit kong tinitignan kapag miss kita 🥺💕')">
+        <img src="assets/photo5.jpg" alt="memory" onclick="openLightbox(5,'photo')">
       </div>
 
       <div class="memory-item">
-        <img src="assets/photo6.jpg" alt="memory"
-          onclick="openLightbox('assets/photo6.jpg','photo','Ito nanamn kahit alam kong ayaw mong pinipicturan ka, patago akong kumuha sayo kasi para soon may may upload ako na sobrang ganda ng mapapangasawa ko! 🥺')">
+        <img src="assets/photo6.jpg" alt="memory" onclick="openLightbox(6,'photo')">
       </div>
 
       <div class="memory-item">
-        <img src="assets/photo7.jpg" alt="memory"
-          onclick="openLightbox('assets/photo7.jpg','photo','Sobrang ganda ng picture na ito, kasi alam ko ikaw na talaga, Kahit ayaw mo pa mag papicture 🥺')">
+        <img src="assets/photo7.jpg" alt="memory" onclick="openLightbox(7,'photo')">
       </div>
 
       <div class="memory-item">
-        <img src="assets/photo8.jpg" alt="memory"
-          onclick="openLightbox('assets/photo8.jpg','photo','Ganda mo dito Baby nice Shot talaga. epal lang sila kuya e haha🥺')">
+        <img src="assets/photo8.jpg" alt="memory" onclick="openLightbox(8,'photo')">
       </div>
 
       <!-- VIDEOS -->
       <div class="memory-item">
-        <video muted autoplay loop
-          onclick="openLightbox('assets/video1.mp4','video','Sobrang saya natin dito baby sana hindi nato mag bago hanggang dulo 🥺🎥')">
+        <video muted autoplay loop onclick="openLightbox(1,'video')">
           <source src="assets/video1.mp4" type="video/mp4">
         </video>
       </div>
 
       <div class="memory-item">
-        <video muted autoplay loop
-          onclick="openLightbox('assets/video2.mp4','video','The best moment na nakasama ka, kahit ano pang isipin mo or mawala man feelings mo hinding hindi ako mas sasawa na piliin ka baby 🥺🎥')">
+        <video muted autoplay loop onclick="openLightbox(2,'video')">
           <source src="assets/video2.mp4" type="video/mp4">
         </video>
       </div>
+
+    </div>
 
     <button class="back-btn" onclick="goBack()">💌 Back to Letter</button>
   </div>
@@ -79,17 +72,19 @@
 
 <!-- LIGHTBOX -->
 <div class="lightbox" id="lightbox">
-  <span class="close" onclick="closeLightbox()">✖</span>
-
   <div class="lightbox-content">
 
-    <img id="lightbox-img" src="" style="display:none;">
+    <!-- MESSAGE SA TAAS -->
+    <p id="lightbox-text"></p>
 
-    <video id="lightbox-video" controls style="display:none;">
+    <!-- PHOTO -->
+    <img id="lightbox-img" src="" style="display:none;" onclick="closeLightbox()">
+
+    <!-- VIDEO -->
+    <video id="lightbox-video" controls style="display:none;" onclick="closeLightbox()">
       <source id="lightbox-video-src" src="" type="video/mp4">
     </video>
 
-    <p id="lightbox-text"></p>
   </div>
 </div>
 
