--- a/memories.html
+++ b/memories.html
@@ -64,6 +64,12 @@
         </video>
       </div>
 
+      <div class="memory-item">
+        <video muted autoplay loop onclick="openLightbox(3,'video')">
+          <source src="assets/video3.mp4" type="video/mp4">
+        </video>
+      </div>
+
     </div>
 
     <button class="back-btn" onclick="goBack()">💌 Back to Letter</button>
